@@ -17,15 +17,36 @@ Ubuntu Package:
 ===============
 
 $ cd ../debian/
-$ git-import-orig -u 0.6.1 ~/projects/xboxdrv/htdocs/xboxdrv-linux-0.6.1.tar.bz2 
-$ dch -v "0.6.1" "New Ubuntu release"
+$ git-import-orig -u 0.6.3 ~/projects/xboxdrv/htdocs/xboxdrv-linux-0.6.3.tar.bz2 
+$ dch -v "0.6.3" "New xboxdrv release"
 $ git-buildpackage --git-tag --git-builder="debuild -S"
-$ sudo pbuilder --build xboxdrv_0.6.1.dsc
-$ dput my-ppa xboxdrv_0.6.1_source.changes
+$ sudo pbuilder --build xboxdrv_0.6.3.dsc
+$ dput my-ppa xboxdrv_0.6.3_source.changes
+
+
+Stuff to do before 0.6.4 release:
+=================================
+
+* integrate filters into --buttonmap and --axismap:
+
+  --buttonmap X^toggle:autofire=B
+  --axismap Y1^relative
+
+  main purpose: allow to make shift a toggle button
+
+* bug: when shifting the last axis state sticks even when they key was released
+
+Figure out a way to load custom keymaps:
+
+* http://madduck.net/docs/extending-xkb/
+* http://stackoverflow.com/questions/1557689/keyboard-remapping-with-more-modifiers
+* http://tldp.org/HOWTO/Keyboard-and-Console-HOWTO-15.html
 
 
 Stuff to do before 0.6.x release:
 =================================
+
+http://www.mp3car.com/vbulletin/input-devices/108554-xbox360-chatpad-awsome-backlit-mini-keyboard-16.html#post1256444
 
 * change default axis/button map depending on controller type (tricky as
   type is only really known after the axis/buttonmap as already been
